- Setup redis for caching. - Changed jwt directory from pkg to lib/jwt and update function names. - Adding jti (jwt id) to token claims when creating a token. - Blacklisting jwt token in redis in Logout RPC. - Updated VerifyToken RPC to validate token from blacklist.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 GRPC_HOST=localhost
 GRPC_PORT=5001
 GRPC_USER_SERVICE_URL=
+GRPC_CLIENT_TIMEOUT=
 
 JWT_SECRET=
 JWT_EXPIRY=3000
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_USERNAME=
+REDIS_PASSWORD=
