- Updated .env.example and added .env.docker-example for docker compose. - Updated readme

--- a/.env.docker-example
+++ b/.env.docker-example
@@ -1,15 +1,15 @@
-GRPC_HOST=localhost
+GRPC_HOST=0.0.0.0
 GRPC_PORT=5001
-GRPC_USER_SERVICE_URL=localhost:5000
+GRPC_USER_SERVICE_URL=microservices-user-service:5000
 GRPC_CLIENT_TIMEOUT=3
 
 JWT_SECRET="MYSECRETKEY"
 JWT_EXPIRY=3600
 
-REDIS_HOST=localhost
+REDIS_HOST=microservices-redis
 REDIS_PORT=6379
-REDIS_USERNAME=
-REDIS_PASSWORD=
+REDIS_USERNAME=default
+REDIS_PASSWORD=password
 
 # gRPC logging
 # GRPC_GO_LOG_VERBOSITY_LEVEL=99
