--- a/.env.docker-example
+++ b/.env.docker-example
@@ -1,12 +1,12 @@
 GRPC_HOST=0.0.0.0
 GRPC_PORT=5001
-GRPC_USER_SERVICE_URL=microservices-user-service:5000
+GRPC_USER_SERVICE_URL=user-service:5000
 GRPC_CLIENT_TIMEOUT=3
 
 JWT_SECRET="MYSECRETKEY"
 JWT_EXPIRY=3600
 
-REDIS_HOST=microservices-redis
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_USERNAME=default
 REDIS_PASSWORD=password
