Added GRPC_CLIENT_TIMEOUT_SECONDS in .env.example and .env.docker-example

--- a/.env.docker-example
+++ b/.env.docker-example
@@ -1,7 +1,8 @@
 GRPC_HOST=0.0.0.0
 GRPC_PORT=5001
+
 GRPC_USER_SERVICE_URL=user-service:5000
-GRPC_CLIENT_TIMEOUT=3
+GRPC_CLIENT_TIMEOUT_SECONDS=5
 
 JWT_SECRET="MYSECRETKEY"
 JWT_EXPIRY=3600
