--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 GRPC_HOST=localhost
 GRPC_PORT=5001
+
 GRPC_USER_SERVICE_URL=localhost:5000
-GRPC_CLIENT_TIMEOUT=3
+GRPC_CLIENT_TIMEOUT_SECONDS=5
 
 JWT_SECRET="MYSECRETKEY"
 JWT_EXPIRY=3600
