- Added Jaeger tracing. - Removed unused .env.example

--- a/.env.docker-example
+++ b/.env.docker-example
@@ -15,3 +15,6 @@ REDIS_PASSWORD=password
 # gRPC logging
 # GRPC_GO_LOG_VERBOSITY_LEVEL=99
 # GRPC_GO_LOG_SEVERITY_LEVEL=info
+
+PROMETHEUS_URL=0.0.0.0:5011
+JAEGER_URL=jaeger:4318
